<resources>
    <string name="app_name">TodocApp</string>

    <string name="saved">La tâche est enregistrée</string>

    <string name="error_happened">Une erreur a eu lieu</string>

    <string name="task_name">Ajouter un tâche à ma liste</string>

    <string name="project_name">Projet Tartampion</string>

    <string name="no_task">Tu n’as aucune tâche à traiter</string>

    <string name="add_task">Ajouter une tâche</string>

    <string name="task_name_hint">Nom de la tâche</string>

    <string name="label_action_filter">Filter</string>

    <string name="sort_alphabetical">A -&gt; Z</string>

    <string name="sort_alphabetical_invert">Z -&gt; A</string>

    <string name="sort_oldest_first">Les plus anciens d’abord</string>

    <string name="sort_recent_first">Les plus récents d’abord</string>

    <string name="empty_task_name">Le nom de la tâche doit être renseigné</string>

    <string name="select_project">Selectionner un projet</string>

    <string name="add_it">Ajouter</string>

    <string name="fake_task">Donner à manger au chien</string>


</resources>