...
        android:src="@drawable/bkg_oval"
        tools:tint="@color/purple_200"
        android:layout_alignParentLeft="true" />


    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/img_delete"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
...
        android:layout_toEndOf="@+id/img_project"
        android:orientation="vertical"
        android:layout_toLeftOf="@+id/img_delete"
        android:layout_toRightOf="@+id/img_project">

        <TextView
            android:id="@+id/lbl_task_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:lines="1"
            android:textStyle="bold"
...
